src/objects/ER_Employee__c.object
<CustomObject>
    <fields>
        <fullName>ER_Card_Operational_System_ID__c</fullName>
        <label>Asset Holder Operational System ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_ClientText__c</fullName>
        <inlineHelpText>This field is used only if you don’t have OneForce Client solution otherwise use the account name lookup</inlineHelpText>
        <label>Emlpoyer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_National_ID_Number__c</fullName>
        <label>National ID Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Employee_Status__c</fullName>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Delivery_Address_City__c</fullName>
        <label>Delivery Address City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Delivery_Address_Country__c</fullName>
        <label>Delivery Address Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Delivery_Address_Street__c</fullName>
        <label>Delivery Address Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Delivery_Address_Zip_Code__c</fullName>
        <label>Delivery Address Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Employee_Number__c</fullName>
        <description>Employee internal ID Number</description>
        <label>Employee Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ER_Personal_Address_City__c</fullName>
        <label>Personal Address City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Personal_Address_Country__c</fullName>
        <label>Personal Address Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Personal_Address_Street__c</fullName>
        <label>Personal Address Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Personal_Address_Zip_Code__c</fullName>
        <label>Personal Address Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ER_Personal_Mobile_Phone__c</fullName>
        <label>Personal Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ER_Professional_Email__c</fullName>
        <label>Professional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ER_Professional_Mobile_Phone__c</fullName>
        <label>Professional Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ER_Salutation__c</fullName>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Circuit_Code__c</fullName>
        <label>Circuit Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Circuit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Circuit</label>
        <referenceTo>IT_Circuit__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Employee_First_Name__c</fullName>
        <label>Employee First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Employee_Last_Name__c</fullName>
        <label>Employee Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_1__c</fullName>
        <label>Level 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_2__c</fullName>
        <label>Level 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_3__c</fullName>
        <label>Level 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level_Id__c</fullName>
        <label>Level Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level</label>
        <referenceTo>IT_Level__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ER_Client__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Employee Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VRER001_Employee_FullName</fullName>
        <active>true</active>
        <description>Employee Full Name can&apos;t be modify</description>
        <errorConditionFormula>ISCHANGED(Name )</errorConditionFormula>
        <errorMessage>You are not able to modify this value</errorMessage>
    </validationRules>
</CustomObject>